feat: update task README commands